<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DishwasherProject</string>
    <string name="savechanges">Save Changes</string>
    <string name="set_time">Set Time</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="start">START</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="ok">OK</string>
    <string name="economy_mode">Economy Mode</string>
    <string name="sensitive_wash">Sensitive Wash</string>
    <string name="durable_wash">Durable Wash</string>
    <string name="fast_wash">Fast Wash</string>
    <string name="buttoneco">ButtonEco</string>
    <string name="quick_start">Quick Start</string>
    <string name="settings">Settings</string>
    <string name="timer">Timer</string>
    <string name="washing_modes">Washing Modes</string>
    <string name="descr">description</string>
    <string name="DishWasher">dishWasher</string>
    <string name="drying">Drying</string>
    <string name="prewash">Prewash</string>
    <string name="notifications">Notifications</string>

    <string-array name="activity_arrays">
        <item>Default</item>
        <item>Economy</item>
        <item>Fast</item>
        <item>Glass</item>
        <item>Pot</item>
    </string-array>
    <string name="title_activity_notification_settings">Notification Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enable">Enable Notifications</string>
    <string name="vibrations">Enable Vibration</string>
    <string name="save_changes">Save Changes</string>
    <string name="on">On</string>
</resources>
