<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settback"
    tools:context=".Notifications"
    >


    <Button
        android:id="@+id/vibr"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonSave"
        android:layout_centerVertical="true"
        android:fontFamily="cursive"
        android:text="@string/on"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtVibr"
        android:layout_width="233dp"
        android:layout_height="51dp"
        android:layout_alignStart="@+id/txtONOFF"
        android:layout_centerVertical="true"
        android:text="@string/vibrations"
        android:textColor="#000"
        android:textStyle="italic"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="218dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="173dp"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:background="@drawable/backgroundspinner"
        android:text="@string/save_changes" />

    <TextView
        android:id="@+id/txtONOFF"
        android:layout_width="281dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:text="@string/enable"
        android:textColor="#000"
        android:textStyle="italic"
        android:textSize="30sp" />

    <Button
        android:id="@+id/not"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibr"
        android:layout_alignTop="@+id/txtONOFF"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:text="@string/on" />

</RelativeLayout>