<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="@drawable/waterbackground">

    <ImageButton
        android:id="@+id/quickStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#0000"
        android:src="@drawable/start2"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="88dp" />

    <ImageButton
        android:id="@+id/timer"
        android:layout_width="171dp"
        android:layout_height="132dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="89dp"
        android:layout_marginStart="18dp"
        android:background="#0000"
        android:src="@drawable/timer" />

    <ImageButton
        android:id="@+id/wmode"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="#0000"
        android:src="@drawable/wmode2" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timer"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:background="#0000"
        android:src="@drawable/more3" />

    <TextView
        android:id="@+id/textQuick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="223dp"
        android:layout_marginTop="112dp"
        android:text="@string/quick_start"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wmode"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:text="@string/settings"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wmode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:text="@string/timer"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/wmode"
        android:layout_below="@+id/wmode"
        android:layout_marginTop="-60dp"
        android:text="@string/washing_modes"
        android:textColor="#000"
        android:textSize="25sp" />


</RelativeLayout>